designed basic homepage

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,1 +1,126 @@
-<p>Hello World</p>
+
+<div class="jumbotron text-center" id="main-jumpbotron" style="margin-top:-20px;">
+    <div class="container-fluid">
+        <h1 class="white">Square Meals</h1>
+        <p class="white" id="main-jumbotron-p">Achieve your body goals through intelligent, convenient nutrition.</p>
+        <a class="btn jumbotron-button" href="">Features</a>
+        <span class="padding"></span>
+        <a class="btn jumbotron-button" href="/signup" role="button">Sign Up</a>
+    </div>
+</div>
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-8 col-sm-offset-2">
+            <div class="col-sm-2 col-sm-offset-1">
+                
+                <!-- Area Chart icon by Icons8 -->
+                <div style="height:200px;width:200px; float:right;">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.0" x="0px" y="0px" viewBox="0 0 48 48" class="icon icons8-Vegetarian-Food" ><g id="surface1"><path style=" fill:#90CAF9;" d="M 43 25 C 43 18.5 39 20 39 6 C 39 6 31 6 29 6 C 29 20 25 18.5 25 25 L 25 40.5 C 25 41.328125 25.671875 42 26.5 42 L 41.5 42 C 42.328125 42 43 41.328125 43 40.5 Z "></path><path style=" fill:#9C27B0;" d="M 40 5.5 C 40 6.328125 39.328125 7 38.5 7 L 29.5 7 C 28.671875 7 28 6.328125 28 5.5 L 28 4.5 C 28 3.671875 28.671875 3 29.5 3 L 38.5 3 C 39.328125 3 40 3.671875 40 4.5 Z "></path><path style=" fill:#FAFAFA;" d="M 41 38.5 C 41 38.777344 40.777344 39 40.5 39 L 27.5 39 C 27.222656 39 27 38.777344 27 38.5 L 27 25 C 27 22.835938 27.488281 21.855469 28.230469 20.367188 C 28.898438 19.023438 29.648438 17.5 30.203125 15 L 37.796875 15 C 38.351563 17.5 39.105469 19.023438 39.773438 20.367188 C 40.511719 21.855469 41 22.835938 41 25 Z "></path><path style=" fill:#F44336;" d="M 20.402344 21.253906 C 20.402344 21.253906 8.625 18.914063 7.128906 28.460938 C 5.628906 38.003906 14.527344 40.992188 17.097656 41.5625 C 19.667969 42.136719 31.214844 43.707031 33.636719 33.363281 C 35.644531 24.792969 27.898438 19.628906 21.257813 21.445313 Z "></path><path style=" fill:#C62828;" d="M 27.28125 21.59375 C 26.722656 22.074219 26.164063 22.210938 25.5 22.210938 C 24.9375 22.210938 24.300781 22.121094 23.523438 22.089844 C 26.796875 22.664063 26.367188 24.59375 29 25.292969 C 28.195313 25.808594 27.421875 26.027344 26.675781 26.027344 C 24.367188 26.027344 22.382813 23.9375 20.988281 22.121094 C 22.339844 24.75 22.824219 26.941406 21.890625 30 C 18.125 27.699219 19.445313 23.605469 19.613281 22.4375 C 18.804688 24.648438 17.25 26.242188 14.863281 26.242188 C 14.015625 26.242188 13.0625 26.039063 12 25.597656 C 15.023438 24.980469 14.535156 21.714844 18.25 21.714844 C 18.441406 21.714844 18.644531 21.726563 18.855469 21.742188 C 18.308594 21.351563 16.902344 21.414063 15.597656 21.03125 C 12.863281 21.335938 9.570313 22.398438 7.953125 25.75 L 11.226563 27.441406 C 12.496094 27.96875 13.71875 28.238281 14.859375 28.238281 C 15.851563 28.238281 16.773438 28.039063 17.613281 27.65625 C 18.054688 29.109375 18.996094 30.574219 20.847656 31.707031 L 23.050781 33.050781 L 23.804688 30.585938 C 24.136719 29.496094 24.308594 28.492188 24.355469 27.5625 C 25.074219 27.851563 25.847656 28.027344 26.671875 28.027344 C 27.847656 28.027344 28.996094 27.675781 30.082031 26.976563 L 32.28125 25.21875 C 31.070313 23.460938 29.222656 22.277344 27.28125 21.59375 Z "></path><path style=" fill:#4CAF50;" d="M 21.890625 30 C 22.828125 26.941406 22.339844 24.75 20.988281 22.121094 C 22.832031 24.523438 25.714844 27.40625 29 25.292969 C 26.367188 24.59375 26.796875 22.664063 23.523438 22.089844 C 25.976563 22.195313 27.058594 22.855469 28.734375 19.507813 C 26.09375 20.898438 24.605469 18.148438 21.335938 21.09375 C 20.757813 21.453125 20.148438 20.539063 19.683594 21.035156 C 17.210938 16.917969 14.160156 20.382813 12.960938 17.230469 C 12.960938 22.078125 17.730469 20.9375 18.855469 21.742188 C 14.476563 21.371094 15.179688 24.949219 12 25.597656 C 16.054688 27.289063 18.515625 25.433594 19.613281 22.4375 C 19.445313 23.605469 18.125 27.699219 21.890625 30 Z "></path><path style=" fill:#4CAF50;" d="M 19.320313 21.761719 C 19.304688 21.902344 19.605469 22.433594 20.578125 22.433594 C 21.746094 22.433594 21.296875 21.855469 21.296875 21.855469 C 21.296875 21.855469 21.191406 18.519531 23.632813 16.3125 C 23.011719 15.800781 22.359375 16.074219 22.359375 16.074219 C 22.359375 16.074219 19.75 18.753906 19.320313 21.761719 Z "></path></g></svg>
+                </div>
+            </div>
+
+            <div class="col-sm-8">
+                <h1 class="feature-h1">Meals Made Easy</h1>
+                <p class="feature-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce porttitor nisl id nunc varius, eu tempor lacus vehicula. Phasellus lobortis nulla sed enim aliquam finibus. Cras venenatis dolor ac orci malesuada volutpat. Pellentesque sapien magna, feugiat finibus felis sed, vestibulum pharetra ante. Mauris convallis nulla magna, vel luctus ipsum tincidunt vitae. Praesent dapibus lacus lorem. Donec eget urna aliquet, blandit diam et, viverra erat. Sed eu mauris quis nisl tincidunt volutpat. Fusce varius bibendum erat at facilisis.</p>
+            </div>
+        </div>
+    </div>
+
+    <br/>
+    <br/>
+
+    <div class="row">
+        <div class="col-sm-6 col-sm-offset-3">
+            <img src="./img/product1.png" class="feature-img"/>
+        </div>
+    </div>
+    
+    <br/>
+    <br/>
+    <hr/>
+
+    <div class="row">
+        <div class="col-sm-8 col-sm-offset-2">
+            <div class="col-sm-2 col-sm-offset-1">
+                
+                <!-- Wrap icon by Icons8 -->
+                <div style="height:200px;width:200px; float:right;">
+                    
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.0" x="0px" y="0px" viewBox="0 0 48 48" class="icon icons8-Wrap" ><g id="surface1"><path style=" fill:#8BC34A;" d="M 15.097656 15 C 13.0625 15.261719 10.175781 13.851563 10.007813 11.773438 C 9.9375 10.917969 10.328125 10.078125 11.285156 10.027344 C 12.144531 9.980469 12.851563 10.8125 13.003906 9.546875 C 13.089844 8.820313 12.214844 8.015625 12.855469 7.292969 C 14.195313 5.769531 15.5625 8.542969 16.804688 7.871094 C 17.621094 7.425781 16.808594 3.855469 18.339844 4.269531 C 18.691406 4.367188 18.722656 5.105469 18.910156 5.367188 C 19.449219 6.140625 20.449219 6.386719 20.78125 5.277344 C 21.023438 4.484375 20.675781 3.738281 21.074219 2.941406 C 21.476563 2.148438 22.210938 1.882813 23.097656 2.046875 C 24.464844 2.296875 23.894531 3.027344 24.214844 3.925781 C 24.328125 4.246094 24.835938 4.894531 25.21875 4.925781 C 25.777344 4.976563 26.023438 4.25 26.496094 4.019531 C 28.109375 3.242188 27.480469 4.867188 28.183594 5.386719 C 28.585938 5.679688 29.117188 5.179688 29.511719 5.355469 C 29.941406 5.546875 29.976563 6.398438 30.480469 6.453125 C 30.910156 6.5 31.800781 5.53125 32.257813 5.359375 C 32.992188 5.085938 34.152344 4.917969 34.898438 5.265625 C 35.46875 5.53125 36.328125 6.535156 36.347656 7.195313 C 36.363281 7.835938 35.746094 8.265625 35.574219 8.886719 C 35.386719 9.570313 35.378906 10.488281 36.269531 10.683594 C 36.800781 10.796875 37.191406 10.34375 37.746094 10.4375 C 38.550781 10.578125 39.140625 12.074219 38.96875 12.738281 C 38.40625 14.917969 35.199219 16.183594 33.445313 16 C 31.730469 15.820313 26.722656 18.082031 25 18.019531 C 21.367188 17.886719 20.277344 14.789063 16.644531 14.8125 C 15.820313 14.816406 15.917969 15.007813 15.097656 15 Z "></path><path style=" fill:#DCE775;" d="M 36 16 C 36 19.3125 33.3125 22 30 22 C 26.6875 22 24 19.3125 24 16 C 24 12.6875 26.6875 10 30 10 C 33.3125 10 36 12.6875 36 16 Z "></path><path style=" fill:#2E7D32;" d="M 30 11 C 32.757813 11 35 13.242188 35 16 C 35 18.757813 32.757813 21 30 21 C 27.242188 21 25 18.757813 25 16 C 25 13.242188 27.242188 11 30 11 M 30 10 C 26.6875 10 24 12.6875 24 16 C 24 19.3125 26.6875 22 30 22 C 33.3125 22 36 19.3125 36 16 C 36 12.6875 33.3125 10 30 10 Z "></path><path style=" fill:#FF3D00;" d="M 26 15 C 26 18.3125 23.3125 21 20 21 C 16.6875 21 14 18.3125 14 15 C 14 11.6875 16.6875 9 20 9 C 23.3125 9 26 11.6875 26 15 Z "></path><path style="fill:none;stroke-width:2;stroke-linecap:butt;stroke-linejoin:miter;stroke:#FFEB3B;stroke-opacity:1;stroke-miterlimit:4;" d="M 17.789063 12 C 17.789063 12 15.59375 17.402344 22 22.597656 "></path><path style="fill:none;stroke-width:2;stroke-linecap:butt;stroke-linejoin:miter;stroke:#FFEB3B;stroke-opacity:1;stroke-miterlimit:4;" d="M 24 8 C 24 8 19 11 21 19 "></path><path style=" fill:#FFC107;" d="M 33.710938 14.039063 L 33.710938 14 L 35.355469 14 C 36.261719 14 37 14.734375 37 15.644531 L 35 44 C 35 44.554688 34.554688 45 34 45 L 23 45 C 17.917969 41.984375 17 37.519531 17 31.253906 C 17 22.003906 24.554688 14.472656 33.710938 14.039063 Z "></path><path style=" fill:#FFC107;" d="M 16.289063 14.039063 L 16.289063 14 L 14.644531 14 C 13.738281 14 13 14.734375 13 15.644531 L 15 44 C 15 44.554688 15.445313 45 16 45 L 24.445313 45 C 29.527344 41.984375 33 37.519531 33 31.253906 C 33 22.003906 25.445313 14.472656 16.289063 14.039063 Z "></path><path style=" fill:#FFA000;" d="M 26.910156 15.777344 C 26.246094 16.097656 25.613281 16.460938 25 16.855469 C 29.773438 19.933594 33 25.21875 33 31.25 C 33 37.515625 29.527344 41.984375 24.445313 45 L 27.902344 45 C 32.335938 41.359375 35 36.9375 35 31.253906 C 35 24.992188 31.785156 19.316406 26.910156 15.777344 Z "></path><path style=" fill:#F57C00;" d="M 21 23 C 21 23.550781 20.554688 24 20 24 C 19.445313 24 19 23.550781 19 23 C 19 22.445313 19.445313 21.996094 20 21.996094 C 20.554688 21.996094 21 22.445313 21 23 Z "></path><path style=" fill:#F57C00;" d="M 23 26 C 23 26.550781 22.550781 27 22 27 C 21.449219 27 21 26.550781 21 26 C 21 25.449219 21.449219 25 22 25 C 22.550781 25 23 25.449219 23 26 Z "></path><path style=" fill:#F57C00;" d="M 19 26 C 19 26.554688 18.554688 27 18 27 C 17.445313 27 17 26.554688 17 26 C 17 25.445313 17.445313 25 18 25 C 18.554688 25 19 25.445313 19 26 Z "></path></g></svg>
+                </div>
+            </div>
+
+            <div class="col-sm-8">
+                <h1 class="feature-h1">Achieve Your Goals</h1>
+                <p class="feature-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce porttitor nisl id nunc varius, eu tempor lacus vehicula. Phasellus lobortis nulla sed enim aliquam finibus. Cras venenatis dolor ac orci malesuada volutpat. Pellentesque sapien magna, feugiat finibus felis sed, vestibulum pharetra ante. Mauris convallis nulla magna, vel luctus ipsum tincidunt vitae. Praesent dapibus lacus lorem. Donec eget urna aliquet, blandit diam et, viverra erat. Sed eu mauris quis nisl tincidunt volutpat. Fusce varius bibendum erat at facilisis.</p>
+            </div>
+        </div>
+    </div>
+
+    <br/>
+    <br/>
+
+    <div class="row">
+        <div class="col-sm-6 col-sm-offset-3">
+            <img src="./img/product2.png" class="feature-img"/>
+        </div>
+    </div>
+
+    <br/>
+    <br/>
+    <hr/>
+
+    <div class="row">
+        <div class="col-sm-8 col-sm-offset-2">
+            <div class="col-sm-2 col-sm-offset-1">
+                
+                <!-- Healthy Food icon by Icons8 -->
+                <div style="height:200px;width:200px; float:right;">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.0" x="0px" y="0px" viewBox="0 0 40 40" style="enable-background:new 0 0 40 40;" class="icon icons8-Healthy-Food" ><g> <path style="fill:#BAE0BD;" d="M29.3,20.504c-4.639,0-5.578-4.084-5.586-4.125l-0.064-0.295l-0.291-0.081      c-0.115-0.033-2.863-0.863-2.863-4.396c0-6.781,9.9-9.999,16.803-10.101c0.679,1.831,1.277,5.867,1.194,8.222       C38.35,13.753,36.967,20.504,29.3,20.504z"></path>   <path style="fill:#5E9C76;" d="M36.946,2.014c0.611,1.893,1.123,5.522,1.046,7.696c-0.136,3.844-1.446,10.293-8.692,10.293     c-4.197,0-5.064-3.584-5.098-3.731l-0.134-0.58l-0.567-0.169c-0.102-0.03-2.505-0.782-2.505-3.916      C20.996,5.277,30.267,2.214,36.946,2.014 M37.635,1.004c-7.405,0-17.639,3.415-17.639,10.603c0,3.979,3.229,4.877,3.229,4.877       s0.98,4.519,6.075,4.519c6.99,0,9.488-5.482,9.692-11.258C39.08,7.261,38.429,2.803,37.635,1.004L37.635,1.004z"></path></g><path style="fill:none;stroke:#5E9C76;stroke-linecap:round;stroke-miterlimit:10;" d="M19.5,27.5c0-10,9.409-17.065,15-22"></path><g> <path style="fill:#BAE0BD;" d="M10.154,22.5c-4.384,0-7.199-4.057-8.6-12.399C2.495,9.674,5.436,8.5,9.319,8.5     c3.951,0,8.181,2.524,8.181,6.282c0,2.39-1.656,3.029-1.673,3.035l-0.263,0.097l-0.055,0.276       C15.475,18.367,14.606,22.5,10.154,22.5z"></path>    <path style="fill:#5E9C76;" d="M9.32,9C13.914,9,17,11.99,17,14.782c0,1.959-1.222,2.515-1.346,2.566l-0.529,0.195l-0.107,0.554        C14.987,18.257,14.219,22,10.154,22c-4.035,0-6.668-3.795-8.041-11.597C3.278,9.918,5.929,9,9.32,9 M9.32,8C4.4,8,1,9.813,1,9.813       C1.999,16.035,4.245,23,10.154,23C15.091,23,16,18.287,16,18.287s2-0.738,2-3.504C18,10.58,13.308,8,9.32,8L9.32,8z"></path></g><path style="fill:none;stroke:#5E9C76;stroke-linecap:round;stroke-miterlimit:10;" d="M19.5,26.5c0-10-13-14-13-14"></path><g>    <g>     <path style="fill:#8BB7F0;" d="M13,38.5c-0.276,0-0.5-0.225-0.5-0.5v-1.051l-0.333-0.118C7.581,35.207,4.5,30.854,4.5,26v-0.5h31           V26c0,4.854-3.081,9.207-7.667,10.831L27.5,36.949V38c0,0.275-0.224,0.5-0.5,0.5H13z"></path>  </g>    <g>     <path style="fill:#4E7AB5;" d="M35,26c0,4.644-2.947,8.807-7.334,10.36L27,36.596v0.707V38H13v-0.697v-0.707l-0.666-0.236          C7.947,34.807,5,30.644,5,26H35 M36,25H4v1c0,5.223,3.342,9.654,8,11.303V38c0,0.552,0.448,1,1,1h14c0.552,0,1-0.448,1-1v-0.697         c4.658-1.649,8-6.08,8-11.303V25L36,25z"></path> </g></g></svg>>
+                </div>
+            </div>
+
+            <div class="col-sm-8">
+                <h1 class="feature-h1">Intelligent Food Recommendations</h1>
+                <p class="feature-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce porttitor nisl id nunc varius, eu tempor lacus vehicula. Phasellus lobortis nulla sed enim aliquam finibus. Cras venenatis dolor ac orci malesuada volutpat. Pellentesque sapien magna, feugiat finibus felis sed, vestibulum pharetra ante. Mauris convallis nulla magna, vel luctus ipsum tincidunt vitae. Praesent dapibus lacus lorem. Donec eget urna aliquet, blandit diam et, viverra erat. Sed eu mauris quis nisl tincidunt volutpat. Fusce varius bibendum erat at facilisis.</p>
+            </div>
+        </div>
+    </div>
+
+    <br/>
+    <br/>
+
+    <div class="row">
+        <div class="col-sm-6 col-sm-offset-3">
+            <img src="./img/product3.png" class="feature-img"/>
+        </div>
+    </div>
+
+    <br/>
+    <br/>
+    <hr/>
+
+
+    <br/>
+    <div class="row text-center">
+        <div class="col-sm-4 col-sm-offset-4">
+            <h1 class="feature-h1">Get Notified When We Launch</h1>
+            <br/>
+            <form class="form col-sm-6 col-sm-offset-3">
+              <div class="form-group">
+                <label class="sr-only" for="exampleInputAmount">Amount (in dollars)</label>
+                <div class="input-group">
+                  
+                  <input type="text" class="form-control" id="exampleInputAmount" placeholder="Enter your email address">
+                  <div class="input-group-addon btn">Submit</div>
+                </div>
+              </div>
+              
+            </form>
+        </div>
+    </div>
+        
+    
+
+</div>
