--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,6 +17,9 @@
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
+
     
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
@@ -43,43 +46,34 @@
 <footer class="site-footer">
     <div class="flexible-container footer">
         <nav class="row" role="navigation">
-            <div class="col-sm-2 center"></div>
-            <div class="col-sm-2 center">
+            <div class="col-sm-2 col-sm-offset-4 center">
                 <ul class="list-unstyled">
                     <h5 class="footer-title">Social</h5>
-                    <li><a target="_blank" class="footer-link" href="http://instagram.com/zacharyshakked">Instagram</a></li>
-                    <li><a target="_blank" class="footer-link" href="https://www.linkedin.com/company-beta/10390183/">LinkedIn</a></li>
+                    <li><a target="_blank" class="footer-link" href="#">Instagram</a></li>
+                    <li><a target="_blank" class="footer-link" href="#">Facebook</a></li>
                 </ul>
             </div>
             <div class="col-sm-2 center">
                 <ul class="list-unstyled">
                     <h5 class="footer-title">Legal</h5>
                     <li><a target="_blank" class="footer-link" href="#">Terms of Use</a></li>
-                    <li><a target="_blank" class="footer-link" href="https://github.com/shakked/analytics-for-instagram-public/blob/master/Privacy%20Policy.md">Privacy Policy</a></li>
+                    <li><a target="_blank" class="footer-link" href="#">Privacy Policy</a></li>
                     <!-- <li><a href="#">Open Source Libraries</a></li> -->
                 </ul>
             </div>
             <div class="col-sm-2 center">
                 <ul class="list-unstyled">
                     <h5 class="footer-title">Contact</h5>
-                    <li><a target="_blank" class="footer-link" href="http://shakd.io/support?app=analyticsforinstagram">Support</a></li>
-                    <li><a target="_blank" class="footer-link" href="https://www.linkedin.com/company-beta/10390183/">Careers</a></li>
+                    <li><a target="_blank" class="footer-link" href="#">Support</a></li>
+                    <li><a target="_blank" class="footer-link" href="#">FAQ</a></li>
                 </ul>
             </div>
-            <div class="col-sm-2 center">
-                <ul class="list-unstyled">
-                    <h5 class="footer-title">Apps</h5>
-                    <li><a target="_blank" class="footer-link" href="https://itunes.apple.com/us/app/command-analytics-stats-for-instagram/id1050497051?mt=8">Command</a></li>
-                    <li><a target="_blank" class="footer-link" href="https://itunes.apple.com/us/app/manager-for-instagram/id1087035435?mt=8">Manager</a></li>
-                    <li><a target="_blank" class="footer-link" href="https://itunes.apple.com/us/app/hashtag-genius-for-ig/id1256222789?mt=8">Hashtag Genius</a></li>
-                    <li><a target="_blank" class="footer-link" href="https://itunes.apple.com/us/app/collages-for-ig/id1260646873?mt=8">Collages</a></li>
-                    <li><a target="_blank" class="footer-link" href="https://itunes.apple.com/us/app/captions-for-ig/id1044012234?mt=8">Captions</a></li>
-                </ul>
-            </div>
-            <div class="col-sm-2 center"></div>
         </nav>
 
         <div class="row text-center footer-paragraph">
+            <br/>
+            <br/>
+            <br/>
             <p>Made with ❤ in Hoboken, New Jersey, USA<br/></p>
         </div>
     </div>
