--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -104,19 +104,19 @@
 
     <br/>
     <div class="row text-center">
-        <div class="col-sm-4 col-sm-offset-4">
+        <div class="col-sm-6 col-sm-offset-3">
             <h1 class="feature-h1">Get Notified When We Launch</h1>
             <br/>
-            <form class="form col-sm-6 col-sm-offset-3">
-              <div class="form-group">
-                <label class="sr-only" for="exampleInputAmount">Amount (in dollars)</label>
-                <div class="input-group">
-                  
-                  <input type="text" class="form-control" id="exampleInputAmount" placeholder="Enter your email address">
-                  <div class="input-group-addon btn">Submit</div>
+
+            <form class="form" action="/" method="POST">
+                <div class="form-group col-sm-6 col-sm-offset-3">
+                    <input type="email" class="form-control" required id="fieldEmailAddress" name="emailAddress" placeholder="Email Address">
                 </div>
-              </div>
-              
+
+                <div class="form-group col-sm-6 col-sm-offset-3">
+                    <button type="submit" class="btn feature-button">Join</button>
+                </div>
+
             </form>
         </div>
     </div>
