signup button will take you to bottom of page

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -5,7 +5,7 @@
         <p class="white" id="main-jumbotron-p">Achieve your body goals through intelligent, convenient nutrition.</p>
         <a class="btn jumbotron-button" href="">Features</a>
         <span class="padding"></span>
-        <a class="btn jumbotron-button" href="/signup" role="button">Sign Up</a>
+        <a class="btn jumbotron-button" href="/#signup" role="button">Sign Up</a>
     </div>
 </div>
 
@@ -103,7 +103,7 @@
 
 
     <br/>
-    <div class="row text-center">
+    <div class="row text-center" id="signup">
         <div class="col-sm-6 col-sm-offset-3">
             <h1 class="feature-h1">Get Notified When We Launch</h1>
             <br/>
