Hooked up feature button

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -3,7 +3,7 @@
     <div class="container-fluid">
         <h1 class="white">Square Meals</h1>
         <p class="white" id="main-jumbotron-p">Achieve your body goals through intelligent, convenient nutrition.</p>
-        <a class="btn jumbotron-button" href="">Features</a>
+        <a class="btn jumbotron-button" href="/#features">Features</a>
         <span class="padding"></span>
         <a class="btn jumbotron-button" href="/#signup" role="button">Sign Up</a>
     </div>
@@ -21,7 +21,7 @@
             </div>
 
             <div class="col-sm-8">
-                <h1 class="feature-h1">Meals Made Easy</h1>
+                <h1 class="feature-h1" id="features">Meals Made Easy</h1>
                 <p class="feature-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce porttitor nisl id nunc varius, eu tempor lacus vehicula. Phasellus lobortis nulla sed enim aliquam finibus. Cras venenatis dolor ac orci malesuada volutpat. Pellentesque sapien magna, feugiat finibus felis sed, vestibulum pharetra ante. Mauris convallis nulla magna, vel luctus ipsum tincidunt vitae. Praesent dapibus lacus lorem. Donec eget urna aliquet, blandit diam et, viverra erat. Sed eu mauris quis nisl tincidunt volutpat. Fusce varius bibendum erat at facilisis.</p>
             </div>
         </div>
