Updated website copy

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -22,7 +22,7 @@
 
             <div class="col-sm-8">
                 <h1 class="feature-h1" id="features">Meals Made Easy</h1>
-                <p class="feature-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce porttitor nisl id nunc varius, eu tempor lacus vehicula. Phasellus lobortis nulla sed enim aliquam finibus. Cras venenatis dolor ac orci malesuada volutpat. Pellentesque sapien magna, feugiat finibus felis sed, vestibulum pharetra ante. Mauris convallis nulla magna, vel luctus ipsum tincidunt vitae. Praesent dapibus lacus lorem. Donec eget urna aliquet, blandit diam et, viverra erat. Sed eu mauris quis nisl tincidunt volutpat. Fusce varius bibendum erat at facilisis.</p>
+                <p class="feature-p">How many complicated nutrition plans have you tried and failed to follow? Nutrition is complicated. Measuring calories is a time-consuming hastle that nobody wants to do. What if we told you that you didn't have to count calories to achieve your body goals? Moreover, nutrition plans get repetitive and boring--the same foods everyday. We're building a solution to all these problems.</p>
             </div>
         </div>
     </div>
@@ -53,7 +53,7 @@
 
             <div class="col-sm-8">
                 <h1 class="feature-h1">Achieve Your Goals</h1>
-                <p class="feature-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce porttitor nisl id nunc varius, eu tempor lacus vehicula. Phasellus lobortis nulla sed enim aliquam finibus. Cras venenatis dolor ac orci malesuada volutpat. Pellentesque sapien magna, feugiat finibus felis sed, vestibulum pharetra ante. Mauris convallis nulla magna, vel luctus ipsum tincidunt vitae. Praesent dapibus lacus lorem. Donec eget urna aliquet, blandit diam et, viverra erat. Sed eu mauris quis nisl tincidunt volutpat. Fusce varius bibendum erat at facilisis.</p>
+                <p class="feature-p">Square Meals is an app designed to help you achieve your body goals without the annoying calorie counting and the boring meals. Through machine learning and algorithmic analysis, we will plan your meals out with both your body goals and variety in mind. Say goodbye to the days of eating the same thing everyday. Don't like a meal we recommend? Don't worry, we have hundreds of other meals that will still conform to your health goals.</p>
             </div>
         </div>
     </div>
@@ -83,7 +83,7 @@
 
             <div class="col-sm-8">
                 <h1 class="feature-h1">Intelligent Food Recommendations</h1>
-                <p class="feature-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce porttitor nisl id nunc varius, eu tempor lacus vehicula. Phasellus lobortis nulla sed enim aliquam finibus. Cras venenatis dolor ac orci malesuada volutpat. Pellentesque sapien magna, feugiat finibus felis sed, vestibulum pharetra ante. Mauris convallis nulla magna, vel luctus ipsum tincidunt vitae. Praesent dapibus lacus lorem. Donec eget urna aliquet, blandit diam et, viverra erat. Sed eu mauris quis nisl tincidunt volutpat. Fusce varius bibendum erat at facilisis.</p>
+                <p class="feature-p">Imagine this: your goal is to become more muscular. Using that information alone, we will plan out your meals for the entire week. Don't like one of the meals? You'll be able to choose from hundreds of meals that will still enable you to hit your goals. Once you're satisfied with a week's recommendations, we'll make you a shopping list. Achieving your goals could never be easier.</p>
             </div>
         </div>
     </div>
