Linked to Privacy Policy and ToS on github

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -56,8 +56,8 @@
             <div class="col-sm-2 center">
                 <ul class="list-unstyled">
                     <h5 class="footer-title">Legal</h5>
-                    <li><a target="_blank" class="footer-link" href="#">Terms of Use</a></li>
-                    <li><a target="_blank" class="footer-link" href="#">Privacy Policy</a></li>
+                    <li><a target="_blank" class="footer-link" href="https://github.com/squaremeals/launchpage/blob/master/Terms%20of%20Use.md">Terms of Use</a></li>
+                    <li><a target="_blank" class="footer-link" href="https://github.com/squaremeals/launchpage/blob/master/PrivacyPolicy.md">Privacy Policy</a></li>
                     <!-- <li><a href="#">Open Source Libraries</a></li> -->
                 </ul>
             </div>
