--- a/main.css
+++ b/main.css
@@ -35,10 +35,6 @@
 	height: 100vh;
 }
 
-#notified{
-	height: 80vh;
-}
-
 #top-rectangles{
 	position: absolute;
 	right: 0;
@@ -49,12 +45,13 @@
 	position: absolute;
 	bottom: 0px;
 	height: 212px;
+	left: 0px;
 }
 
 h1{
+	position: absolute;
 	font-weight: 300;
 	font-family: 'SF Thin';
-	position: absolute;
 	top: 70px;
 	left: 61px;
 	text-transform: uppercase;
@@ -86,19 +83,15 @@ h1{
 }
 
 #mockup{
-	position: absolute;
-	right: 250px;
-	bottom: -119px;
-	height: 720px;
+	width: 40%;
+	float: right;
 }
+
 
 h2{
 	font-size: 48px;
 	opacity: .8;
-	height: 58px;
 	left: 263px;
-	position: absolute;
-	margin-top: 253px;
 }
 
 p{
@@ -106,26 +99,27 @@ p{
 	font-size: 20px;
 	line-height: 32px;
 	width: 452px;
-	left: 263px;
-	position: absolute;
-	margin-top: 402px;
+}
+#top-p{
+	margin-top: 20px;
 }
 
 #email{
 	height: 75px;
-	width: 456px;
+	width: 70%;
 	background-color: #F6F7F9;
 	border-radius: 8px;
 	border: none;
 	opacity: .6;
   	font-size: 20px;
   	padding-left: 50px;
-  	margin-top: 350px;
-  	margin-left: 263px;
+  	margin-top: 10px;
+  	margin-bottom: 100px;
+  	margin-right: 5%;
 }
 
 #submit{
-	width: 163px;
+	width: 22%;
 	height: 75px;
 	border-radius: 8px;
 	border: none;
@@ -133,10 +127,28 @@ p{
 	text-transform: uppercase;
 	color: white;
 	font-size: 20px;
-	margin-left: 10px;
-	margin-top: 350px;
+	margin-top: 60px;
 }
 
+#main-content{
+	z-index: 10;
+	position: absolute;
+	top: calc(50vh - 137px);
+	left: calc(50vw - 450px);
+	display: inline;
+	width: 90%;
+	max-width: 900px;
+}
+
+#main-content #text{
+	float: left;
+	width: 50%;
+}
+#main-content #text p{
+	float: left;
+	width: 100%;
+	position: relative;
+}
 footer{
 	background-color: #F6F7F9;
 	height: 250px;
@@ -166,3 +178,86 @@ footer a{
 footer a:hover{
 	text-decoration: underline;
 }
+
+#half-mock{
+	display: none;
+}
+
+@media (max-width: 950px){
+
+#main-content{
+	left: 5%;	
+	}
+#main-content h2{
+	font-size: 2em;
+}
+#main-content p{
+	font-size: 16px;
+}
+#half-mock{
+	display: block;
+	max-width: 400px;
+	width: 80%;
+	margin: auto;
+	margin-bottom: 30px;
+	margin-top: -50px;
+}
+#mockup{
+	display: none;	
+	}
+#main-content {
+	width: 100%;
+}
+#main-content #text{
+	width: 90%;
+}
+#main-content h2, #main-content p{
+	text-align: center;
+}
+}
+
+@media (max-width: 745px){
+	h1{
+		position: relative;
+		margin: auto;
+		padding-top: 100px;
+		text-align: center;
+		left: 0;
+	}
+	#half-mock{
+	margin-top: -10px;
+	}
+#top-rectangles{
+	max-width: 500px;
+	width: 100%;
+	height: auto;
+}
+}
+
+
+form{
+	position: relative;
+	margin: 200px auto;
+	width: 90%;
+	max-width: 600px;
+
+}
+
+@media (max-width: 745px){
+	form{
+		text-align: center;
+	}
+	form #email{
+		width: 90%;
+		margin-bottom: 20px;
+	}
+	form #submit{
+		width: 90%;
+		margin-top: 0px;
+		margin-left: -20px;
+	}
+	form h2{
+		font-size: 2em;
+		margin-bottom: 20px;
+	}
+	}
